Minor cleanup in the LocalProject